Add urls to home page

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -48,7 +48,8 @@
       Build your reputation
     Publish updates about your own research, and establish expertise.
 
-  
+  - @items.each do |item|
+    = item.url
     
 
   / .search
